# sift

./: .gitignore  Cargo.toml  Makefile.toml  NOTES.md  README.md  go.mod  go.sum  rustfmt.toml  sift.go
.github/: dependabot.yml
.github/workflows/: rust.yml
proptest-regressions/: midpoint.txt
sift-core/: Cargo.toml
sift-core/src/: lib.rs
sift-core/src/persist/: container.rs  document.rs  mod.rs  store.rs  task.rs
sift-cursive/: Cargo.toml
sift-egui/: Cargo.toml  TODO.md
sift-egui/src/: app.rs  lib.rs  main.rs  state.rs
sift-iced/: Cargo.toml
sift-iced/src/: app.rs  main.rs
sift-persist/: Cargo.toml
sift-persist/src/: container.rs  document.rs  lib.rs  serialization.rs  store.rs  task.rs
sift-state/: Cargo.toml
sift-state/src/: state.rs
sift-tui/: Cargo.toml
sift-tui/src/: lib.rs  main.rs  toplevel.rs  tui.rs  ui_state.rs
sift-tui/src/screen/: edit.rs  main.rs  mod.rs  quit.rs
sift-xilem/: Cargo.toml
sift-xilem/src/: main.rs
src/: app.rs  edit_screen.rs  event.rs  handle_key_event.rs  keys.rs  keys.toml  lib.rs  main.rs  main_screen.rs  midpoint.rs  persist.rs  render.rs  state.rs  terminal_input.rs  tui.rs  ui.rs  ui_state.rs  update.rs
src/persist/: container.rs  crc.rs  document.rs  mod.rs  serialization.rs  store.rs  task.rs
src/screen/: edit.rs  main.rs  mod.rs  quit.rs
