[package]
name = "sift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
automerge = "0.5.11"
autosurgeon = "0.8.3"
chrono = "0.4.38"
crossterm = "0.27.0"
ratatui = "0.26.3"
tui-prompts = "0.3.12"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v7",                # Lets you generate random UUIDs
]

[dev-dependencies]
automerge-test = "0.4.3"
