[package]
name = "sift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
automerge = "0.5.11"
autosurgeon = "0.8.5"
chrono = "0.4.38"
cli-log = "2.0.0"
crokey = "1.0.1"
crossterm = "0.27.0"
dirs = "5.0.1"
im = "15.1.0"
itertools = "0.13.0"
ratatui = "0.26.3"
serde = "1.0.203"
thiserror = "1.0.61"
toml = "0.8.14"
tui-prompts = "0.3.12"

[dependencies.uuid]
version = "1.9.1"
features = [
    "v7", # Lets you generate random UUIDs
]

[dev-dependencies]
automerge-test = "0.4.3"

[lints.clippy]
# TODO: work through uses of unwrap and turn this on.
#unwrap_used = "deny"
