[package]
name = "sift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
automerge = "0.5.11"
autosurgeon = "0.8.5"
chrono = "0.4.38"
cli-log = "2.0.0"
crokey = "1.0.1"
dirs = "5.0.1"
im = "15.1.0"
itertools = "0.13.0"
ratatui = "0.27.0"
serde = "1.0.206"
thiserror = "1.0.63"
toml = "0.8.19"
tui-prompts = "=0.3.20"
xilem = "0.1.0"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v7", # Lets you generate random UUIDs
]

[patch.crates-io]
xilem.path = "../xilem/xilem"

[dev-dependencies]
automerge-test = "0.4.3"

[lints.clippy]
# TODO: work through uses of unwrap and turn this on.
#unwrap_used = "deny"
