[package]
name = "sift-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"

[dev-dependencies]
automerge-test = "0.4.3"

[lints.clippy]
# TODO: work through uses of unwrap and turn this on.
#unwrap_used = "deny"
