[package]
name = "sift-egui"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
sift-core = { path = "../sift-core" }
sift-persist = { path = "../sift-persist" }
eframe = "0.28.1"
egui_extras = { version = "0.28.1", features = [ "image" ] }
env_logger = "0.11.5"
anyhow = "1.0.86"
chrono = "0.4.38"
itertools = "0.13.0"
