[package]
name = "sift-iced"
version = "0.1.0"
edition = "2021"

[dependencies]
sift-core = { path = "../sift-core" }
sift-persist = { path = "../sift-persist" }
sift-state= { path = "../sift-state" }
anyhow = "1.0.86"

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "9b99b93"

[lints]
workspace = true
