[package]
name = "sift-iced"
version = "0.1.0"
edition = "2021"

[dependencies]
sift-core = { path = "../sift-core" }
sift-persist = { path = "../sift-persist" }
sift-state = { path = "../sift-state" }
anyhow = "1.0.86"
chrono = "0.4.38"

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"

[dependencies.iced_aw]
git = "https://github.com/iced-rs/iced_aw"
default-features = false
features = ["date_picker", "icons"]

[lints]
workspace = true
