[package]
name = "sift-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sift-core = { path = "../sift-core" }
sift-persist = { path = "../sift-persist" }
sift-state = { path = "../sift-state" }
anyhow = "1.0.86"
cli-log = "2.0.0"
crokey = "1.1.0"
ratatui = "0.28.0"
serde = "1.0.206"
thiserror = "1.0.66"
toml = "0.8.19"
tui-prompts = "0.4.0"

[lints.clippy]
# TODO: work through uses of unwrap and turn this on.
#unwrap_used = "deny"
